<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <RelativeLayout
        android:elevation="@dimen/card_elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_owner"
            android:layout_width="@dimen/avatar_dimens"
            android:layout_height="@dimen/avatar_dimens"
            android:layout_gravity="left"
            android:src="@mipmap/ic_owner"/>

        <TextView
            android:text="@string/txt_message_info_l0"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/textTitleCommunications"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_marginRight="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_owner"
            android:id="@+id/textView0" />

        <TextView
            android:text="@string/txt_message_info_l3"
            android:textSize="10dp"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_owner"
            android:layout_below="@+id/textView0"
            android:id="@+id/textView3" />

        <TextView
            android:text="@string/txt_message_info_contact1"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_owner"
            android:id="@+id/textView5" />

        <TextView
            android:text="@string/txt_message_info_contact2"
            android:textSize="10dp"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:id="@+id/textView6" />

        <TextView
            android:text="@string/txt_message_info_contact3"
            android:textSize="10dp"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:id="@+id/textView7" />

        <TextView
            android:text="@string/txt_message_info_version1"
            android:textSize="10dp"
            android:layout_marginRight="@dimen/margin_top"
            android:layout_marginTop="@dimen/margin_top"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:id="@+id/textView8" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_marginRight="@dimen/margin_top"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_height="2dip"
            android:layout_below="@+id/textView8"
            android:background="#A8A8A8" />

        <TextView
            android:text="@string/txt_message_info_copyright"
            android:textSize="10dp"
            android:layout_marginRight="@dimen/margin_top"
            android:layout_marginTop="@dimen/margin_top"
            android:textStyle="italic"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:id="@+id/textView9" />

    </RelativeLayout>

</LinearLayout>