<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_splash_margin_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/icon_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_main_slogan_tel"
            android:textColor="@color/colorSplashScreenText"
            android:textStyle="bold"
            android:textSize="@dimen/textTitleCommunications" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_splash_margin"
        android:paddingLeft="@dimen/activity_splash_margin"
        android:paddingRight="@dimen/activity_splash_margin"
        android:paddingTop="@dimen/activity_splash_margin"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_school"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_splash_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_main_slogan_address"
            android:textColor="@color/colorSplashScreenText"
            android:textStyle="bold"
            android:textSize="@dimen/textDescriptionCommunications" />

    </LinearLayout>


</RelativeLayout>